--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,7 +136,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #7289DA;
+			color: #00D3B7;
 		}
 
 	strong, b {
@@ -281,8 +281,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			border-color: #7289DA;
-			color: #7289DA;
+			border-color: #00D3B7;
+			color: #00D3B7;
 		}
 
 			input[type="submit"]:hover:active,
@@ -398,7 +398,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #7289DA;
+			border-color: #00D3B7;
 		}
 
 	.select-wrapper {
@@ -509,7 +509,7 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #7289DA;
+			border-color: #00D3B7;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -890,7 +890,7 @@
 					top: 0;
 					width: 100%;
 					height: 100%;
-					box-shadow: inset 0 0 0 2px #7289DA, inset 0 0 0px 3px rgba(0, 0, 0, 0.15);
+					box-shadow: inset 0 0 0 2px #00D3B7, inset 0 0 0px 3px rgba(0, 0, 0, 0.15);
 					opacity: 0;
 					z-index: 1;
 				}
