--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,15 @@
+{%- assign posts=site.posts | where:"lang-ref", page.lang-ref | sort: 'lang' -%}
+{%- assign pages=site.pages | where:"lang-ref", page.lang-ref | sort: 'lang' | concat: posts -%}
 <head>
-	<title>{{ site.title }}</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="{{ "/assets/js/ie/html5shiv.js" | relative_url }}"></script><![endif]-->
-	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "/assets/css/ie8.css" | relative_url }}" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "/assets/css/ie9.css" | relative_url }}" /><![endif]-->
-	<noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | relative_url }}" /></noscript>
+    <title>{{ include.title }} - {{ include.subtitle }}</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="{{ 'assets/css/styles.css' | absolute_url }}" />
+    {%- if site.favicon.url -%}
+    <link rel="icon" href="{{ site.favicon.url | absolute_url }}" />
+    {%- endif -%}
+    {%- for page in pages -%}
+    <link rel="alternate" hreflang="{{ page.lang }}" href="{{ page.url }}" />
+    {%- endfor -%}
+    <noscript><link rel="stylesheet" href="{{ 'assets/css/noscript.css' | absolute_url }}" /></noscript>
 </head>
