--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,20 +1,35 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
-///
-/// Lens by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
-
 /* Header */
 
-	#header {
-		@include padding(3em, 2.25em);
+.language {
+	position: fixed;
+	right: 0;
+	text-align: right;
+	z-index: 10002;
 
-		h1 {
-			font-size: 2.25em;
-			font-weight: _font(weight-bold);
+	li {
+		display: inline-block;
+		margin: 0;
+		margin-right: 1em;
+		padding: 0 1em 0 0;
+
+		&:last-child {
+			padding-right: 0;
+		}
+
+		.icon {
+			color: inherit;
+
+			&:before {
+				font-size: 1.25em;
+			}
 		}
 	}
+
+	a {
+		border: none;
+	}
+	
+	.en:lang(en), .fr:lang(fr), .de:lang(de){
+		font-weight: bold;
+	}
+}
